--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-react-mathjax": "^2.0.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1"
   }
 }
